<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragments.NewFragment">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="UselessParent">
        <LinearLayout
            android:gravity="center"
            android:layout_gravity="center"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:ignore="UselessParent">
            <androidx.cardview.widget.CardView
                android:layout_marginTop="60dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <TextView
                    android:fontFamily="serif"
                    android:textColor="@color/colorTextPrimary"
                    android:textSize="25sp"
                    android:gravity="center"
                    android:text="@string/etom"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:contentDescription="@string/app_name" />

            </androidx.cardview.widget.CardView>
            <TextView
                android:textStyle="bold"
                android:layout_marginTop="40dp"
                android:layout_marginBottom="40dp"
                android:textSize="18sp"
                android:textColor="@color/colorTextPrimary"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_name" />
            <TextView
                android:layout_margin="10dp"
                android:textSize="14sp"
                android:textColor="@color/colorTextPrimary"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/build_app_24_5_2020" />
            <TextView
                android:layout_margin="10dp"
                android:textSize="14sp"
                android:textColor="@color/colorTextPrimary"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/version_1_0_0" />
            <TextView
                android:textStyle="bold"
                android:layout_margin="10dp"
                android:textSize="16sp"
                android:textColor="@color/colorTextPrimary"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/developed_by_kyaw_thu" />
            <TextView
                android:layout_margin="10dp"
                android:textSize="14sp"
                android:textColor="@color/colorTextPrimary"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/email_copypaste673_gmail_com" />
            <TextView
                android:layout_margin="10dp"
                android:textSize="14sp"
                android:textColor="@color/colorTextPrimary"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/phone_09750534996" />

        </LinearLayout>

    </LinearLayout>

</FrameLayout>