<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:background="@color/colorTextPrimary"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">
    <TextView
        android:textColor="@color/colorWhite"
        android:padding="20dp"
        android:layout_gravity="center_vertical"
        android:gravity="center_vertical|left"
        android:textSize="18sp"
        android:text="@string/app_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="RtlHardcoded" />
    <TextView
        android:textColor="@color/colorWhite"
        android:padding="20dp"
        android:gravity="center|left"
        android:textSize="15sp"
        android:id="@+id/title"
        android:text="@string/thank"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="RtlHardcoded,RtlSymmetry" />
    <LinearLayout
        android:paddingLeft="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="RtlHardcoded,RtlSymmetry">
        <RadioGroup
            android:id="@+id/radioGroup"
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:ignore="UselessParent">
            <RadioButton
                android:id="@+id/zawgyi"
                android:checked="true"
                android:text="@string/zawgyi"
                android:textColor="@color/colorWhite"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <RadioButton
                android:id="@+id/unicode"
                android:text="@string/unicode"
                android:textColor="@color/colorWhite"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        </RadioGroup>
    </LinearLayout>
    <LinearLayout
        android:gravity="right"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="RtlHardcoded">
        <Button
            android:background="@color/colorAccent"
            android:id="@+id/ok"
            android:textColor="@color/colorTextPrimary"
            android:text="@string/ok"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

</LinearLayout>