<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FontActivity"
    android:background="@color/colorTextPrimary">
    <LinearLayout
        android:layout_marginTop="50dp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal">
        <ImageView
            android:src="@mipmap/ic_launcher"
            android:layout_width="100dp"
            android:layout_height="100dp"/>
        <TextView
            android:padding="10dp"
            android:textColor="@color/colorWhite"
            android:textSize="20sp"
            android:text="@string/app_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/retry"
        android:layout_marginTop="50dp"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <ImageView
            android:id="@+id/rotate"
            android:src="@drawable/ic_refresh"
            android:layout_width="100dp"
            android:layout_height="100dp"
            app:tint="@color/colorRed" />
        <TextView
            android:padding="10dp"
            android:textColor="@color/colorWhite"
            android:textSize="18sp"
            android:text="@string/retry"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </LinearLayout>
    <LinearLayout
        android:padding="@android:dimen/app_icon_size"
        android:layout_gravity="bottom|center_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/alert"
            android:padding="10dp"
            android:textColor="@color/colorWhite"
            android:textSize="18sp"
            android:text="@string/version_1_0_0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </LinearLayout>



</androidx.coordinatorlayout.widget.CoordinatorLayout>