<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".Fragments.HomeFragment">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:padding="15dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:textSize="16sp"
                android:textStyle="bold"
                android:textColor="@color/colorTextPrimary"
                android:gravity="center"
                android:id="@+id/lang1"
                android:text="@string/english"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"/>
            <ImageView
                android:tint="@color/colorTextPrimary"
                android:src="@drawable/ic_swap"
                android:id="@+id/convertImage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:ignore="UseAppTint" />

            <TextView
                android:textSize="16sp"
                android:textStyle="bold"
                android:textColor="@color/colorTextPrimary"
                android:gravity="center"
                android:id="@+id/lang2"
                android:text="@string/myanmar"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"/>

        </LinearLayout>

        <androidx.cardview.widget.CardView
            android:layout_marginTop="1dp"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:background="@drawable/border_background"
                android:gravity="center_vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <androidx.appcompat.widget.SearchView
                    android:autofillHints="Search..."
                    app:queryHint="Search..."
                    android:id="@+id/search"
                    app:iconifiedByDefault="false"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"/>
                <ImageView
                    android:layout_marginRight="10dp"
                    android:tint="@color/colorTextPrimary"
                    android:id="@+id/speak"
                    android:src="@drawable/ic_mic"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:ignore="UseAppTint"
                    android:contentDescription="@string/app_name" />
            </LinearLayout>

        </androidx.cardview.widget.CardView>
        <LinearLayout
            android:orientation="vertical"
            android:id="@+id/recent_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:layout_gravity="center_vertical"
                android:paddingTop="5dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:paddingBottom="15dp"
                android:orientation="horizontal"
                android:gravity="center_vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:textSize="14sp"
                    android:textColor="@color/colorTextPrimary"
                    android:text="@string/recent"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"/>
                <TextView
                    android:id="@+id/clear_all"
                    android:textSize="14sp"
                    android:textColor="@color/colorTextPrimary"
                    android:text="@string/clear_all"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

            </LinearLayout>
            <ListView
                style="@style/Widget.AppCompat.Light.ListView.DropDown"
                android:id="@+id/listviewRecent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </LinearLayout>

        <ListView
            style="@style/Widget.AppCompat.Light.ListView.DropDown"
            android:id="@+id/listView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </LinearLayout>

</FrameLayout>